<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoTaskIt</string>

    <!-- Titles -->

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_editor">Task Editor</string>
    <string name="title_pick_location_activity">Pick Task Location</string>

    <!-- Menu and ActionBar -->

    <string name="action_add">Add Task</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_discard">Discard</string>
    <string name="action_delete">Delete</string>

    <string-array name="actionbar_navigation_list">
        <item>List</item>
        <item>Map</item>
    </string-array>

    <!-- Preferences -->

    <string name="pref_title">User Preferences</string>
    <string name="pref_user_autoupdate">Auto-notify</string>
    <string name="pref_user_autoupdate_summary">Check to allow auto updates on current location and notification</string>
    <string name="pref_user_autoupdate_key">prefAutoUpdate</string>
    <string name="pref_user_frequency">Update frequency</string>
    <string name="pref_user_frequency_summary">Time interval (in minutes) for checking the proximity to nearby task locations </string>
    <string name="pref_user_frequency_key">prefFrequency</string>
    <string name="pref_user_frequency_default">20</string>

    <!-- UI -->

    <string name="editor_edit_name_hint">Name</string>
    <string name="editor_edit_description_hint">Description</string>
    <string name="editor_button_location">Set Location</string>
    <string name="editor_priority_label">Priority</string>
    <string name="editor_info_label">Info</string>
    <string name="editor_notifications_label">Type of Notification</string>
    <string name="editor_radiobutton_notifications_normal">Normal (Bar)</string>
    <string name="editor_radiobutton_notifications_important">Important (Pop-up)</string>
    <string name="editor_button_confirm">Confirm</string>
    <string name="editor_button_choose">Choose Location</string>
    <string name="getting_gps_infomsg">Awaiting GPS fix...</string>
    <string name="editor_button_add">Add Task</string>
    <string name="editor_button_add_when_editing">Done</string>
    <string name="gps_disabled_infomsg">GPS is disabled. Location may not be accurate!</string>

    <string-array name="editor_priority_array">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
    
    <!-- Dialog -->

	<string name="list_dialog_task_message">What do you wish to do with this task?</string>
	<string name="list_dialog_task_edit">Edit</string>
	<string name="list_dialog_task_delete">Delete</string>
	<string name="list_dialog_task_cancel">Cancel</string>
	
	<string name="guide_init_message">There are no tasks created! Let\'s fix that by tapping the + button up there!</string>

	<!-- Errors -->
	<string name="error_location_providers_not_found">GeoTaskIt: Device not capable ot getting location. Try enabling via Settings, then try again</string>
	
</resources>