<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_title" >
        
        <CheckBoxPreference
            android:summary="@string/pref_user_autoupdate_summary"
            android:title="@string/pref_user_autoupdate"
            android:key="@string/pref_user_autoupdate_key"
            android:defaultValue="false">
        </CheckBoxPreference>
        
        <EditTextPreference
                android:title="@string/pref_user_frequency"
                android:summary="@string/pref_user_frequency_summary"
                android:key="@string/pref_user_frequency_key"
                android:defaultValue="@string/pref_user_frequency_default"/>
    </PreferenceCategory>
     
    <!-- <PreferenceCategory android:title="@string/pref_update_setting" >
 
        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>
    -->
 
</PreferenceScreen>