<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditorActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:id="@+id/editor_view_priority_indicator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_editor_view_priority_indicator_height" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_priority_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/editor_spinner_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_editor_subitem_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_info_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editor_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_editor_subitem_margin"
            android:hint="@string/editor_edit_name_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/editor_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_editor_subitem_margin"
            android:hint="@string/editor_edit_description_hint"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/editor_button_pick_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick Location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/editor_latitude_label"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_editor_subitem_margin"
                android:text="Latitude"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/editor_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/editor_longitude_label"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_editor_subitem_margin"
                android:text="Longitude"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/editor_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/editor_radiogroup_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/editor_radiobutton_notifications_normal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editor_notifications_label"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@id/editor_radiobutton_notifications_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editor_radiobutton_notifications_normal" />

            <RadioButton
                android:id="@+id/editor_radiobutton_notifications_important"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editor_radiobutton_notifications_important" />
        </RadioGroup>

        <Button
            android:id="@+id/editor_button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editor_button_add" />
    </LinearLayout>

</ScrollView>